src/components/global/gux-button/gux-button.less
// Variables part
@primary-background-color: @gux-dark-blue;
@primary-border-color: #2455a3;
@primary-color: @gux-off-white;
@primary-active-background-color: #275aad;

@primary-dark-background-color: @gux-dark-blue;
@primary-dark-border-color: @gux-grey-1;
@primary-dark-color: @gux-off-white;
@primary-dark-hover-background-color: #3476f5;

@secondary-background-color: @gux-border;
@secondary-border-color: #d5dce0;
@secondary-color: @gux-grey-2;
@secondary-active-background-color: #dce1e5;

@secondary-dark-background-color: #555d66;
@secondary-dark-border-color: @gux-grey-1;
@secondary-dark-color: @gux-off-white;
@secondary-dark-hover-background-color: #76818f;

gux-button {
  display: inline-block;
  min-width: 32px;
  max-width: 96px;
  &[disabled] {
    opacity: 0.5;
    pointer-events: none;
    cursor: default;
  }
  > button {
    width: 100%;
    padding: 0 16px;
    height: 32px;
    border-radius: 2px;
    cursor: pointer;
    overflow: hidden;
    white-space: nowrap;
    text-overflow: ellipsis;
    &:focus {
      outline: none;
    }
    &.gux-primary {
      background-color: @primary-background-color;
      border: 1px solid @primary-border-color;
      color: @primary-color;
      &:hover {
        box-shadow: 0 0 1px 1px rgba(34, 37, 41, 0.48);
      }
      &:active {
        background-color: @primary-active-background-color;
      }
      &:focus {
        box-shadow: 0 0 0 3px rgba(117, 168, 255, 0.5);
      }
    }
    &.gux-secondary {
      background-color: @secondary-background-color;
      border: 1px solid @secondary-border-color;
      color: @secondary-color;
      &:hover {
        box-shadow: 0 0 1px 1px rgba(34, 37, 41, 0.24);
      }
      &:active {
        background-color: @secondary-active-background-color;
      }
      &:focus {
        box-shadow: 0 0 0 3px rgba(117, 168, 255, 0.5);
      }
    }

    .left-icon,
    .right-icon {
      font-size: @gux-icon-size-default;
      line-height: 30px;
      height: 30px;

      &.margin {
        margin-left: 5px;
      }
    }
  }
}

// Theming

// Dark
.gux-button-dark-theme {
  > button {
    &.gux-primary {
      background-color: @primary-dark-background-color;
      border: 1px solid @primary-dark-border-color;
      color: @primary-dark-color;
      &:hover {
        background-color: @primary-dark-hover-background-color;
      }
      &:active {
        box-shadow: 0 0 0 3px rgba(117, 168, 255, 1);
      }
      &:focus {
        box-shadow: 0 0 0 3px rgba(117, 168, 255, 0.5);
      }
    }
    &.gux-secondary {
      background-color: @secondary-dark-background-color;
      border: 1px solid @secondary-dark-border-color;
      color: @secondary-dark-color;
      &:hover {
        background-color: @secondary-dark-hover-background-color;
      }
      &:active {
        box-shadow: 0 0 0 3px rgba(117, 168, 255, 1);
      }
      &:focus {
        box-shadow: 0 0 0 3px rgba(117, 168, 255, 0.5);
      }
    }
  }
}

.gux-button-light-theme {
  > button {
    &.gux-primary {
      background-color: @primary-background-color;
      border: 1px solid @primary-border-color;
      color: @primary-color;
      &:hover {
        box-shadow: 0 0 1px 1px rgba(34, 37, 41, 0.48);
      }
      &:active {
        background-color: @primary-active-background-color;
      }
      &:focus {
        box-shadow: 0 0 0 3px rgba(117, 168, 255, 0.5);
      }
    }
    &.gux-secondary {
      background-color: @secondary-background-color;
      border: 1px solid @secondary-border-color;
      color: @secondary-color;
      &:hover {
        box-shadow: 0 0 1px 1px rgba(34, 37, 41, 0.24);
      }
      &:active {
        background-color: @secondary-active-background-color;
      }
      &:focus {
        box-shadow: 0 0 0 3px rgba(117, 168, 255, 0.5);
      }
    }
  }
}

.gux-dark-theme {
  gux-button {
    .gux-button-dark-theme();
  }
}
gux-button.gux-dark-theme {
  .gux-button-dark-theme();
}

// Light
.gux-light-theme {
  gux-button {
    .gux-button-light-theme();
  }
}
gux-button.gux-light-theme {
  .gux-button-light-theme();
}

// Default Theme
gux-button {
  .gux-button-light-theme();
}

